--- a/templates/home.html
+++ b/templates/home.html
@@ -49,29 +49,39 @@
     </div>
   </div>
 </div>
-<div class="row p-1">
-  <h3>Pending tasks</h3>
-  {% for task in all_tasks %}
-  <div class="col-md-3 ">
-    <div class=" card mb-2 " style=" border-radius: 0; box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
-      <div class="card-body">
-        <h5 class="card-title">{{task.client.name}}</h5>
-        <p class="card-text">{{ task.name }}</p>
-      </div>
-      <div class="card-body">
-        <p class="card-text">{{ task.date|date:"j F" }}</p>
-        {% if task.status == "0" %}
 
-        <button type="button" class="btn btn-success edit-task" data-bs-toggle="modal" data-bs-target="#exampleModal"
-          data-task-id="{{ task.id }}"><i class="bi bi-pencil-square">Edit</i></button>
-        {% elif task.status == "1" %}
-        <a type="text">no edit</a>
-        {% endif %}
+<div class="row">
+  <div class="col-12">
+    <div class="container-fluid" style="height: 500px; overflow-y: auto;">
+      <div class="row p-1">
+        <h3>Pending tasks</h3>
+        {% for task in all_tasks %}
+        <div class="col-md-3 ">
+          <div class=" card mb-2 shadow-sm" style=" border-radius: 0;">
+            <div class="card-body">
+              <h5 class="card-title">{{task.client.name}}</h5>
+              <p class="card-text">{{ task.name }}</p>
+            </div>
+            <div class="card-body">
+              <p class="card-text">{{ task.date|date:"j F" }}</p>
+              {% if task.status == "0" %}
+      
+              <button type="button" class="btn btn-success edit-task" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                data-task-id="{{ task.id }}"><i class="bi bi-pencil-square">Edit</i></button>
+              {% elif task.status == "1" %}
+              <a type="text">no edit</a>
+              {% endif %}
+            </div>
+          </div>
+        </div>
+        {% endfor %}
       </div>
+
     </div>
   </div>
-  {% endfor %}
 </div>
+
+
 </div>
 <div class="row row-cols-1 row-cols-md-4 g-1 justify-content-center" style="margin-bottom: 30px;">
 
