--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
   <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'icofont/icofont.min.css' %}">
   <link
-    href='https://fonts.googleapis.com/css?family=Encode Sans Condensed|Racing Sans One|Audiowide|DM Sans|Trirong|Yanone Kaffeesatz|Bungee|Geo'
+    href='https://fonts.googleapis.com/css?family=Encode Sans Condensed|Monomaniac One|Squada One|Odibee Sans|Contrail One|Racing Sans One|Audiowide|DM Sans|Monoton|Megrim|Yanone Kaffeesatz|Bungee|Geo'
     rel='stylesheet'>
   <style>
     body {
@@ -72,7 +72,7 @@
             <li class="nav-item mb-3">
               <a href="{% url 'pending_task' %}" class="nav-link" title="PENDING TASK" data-bs-toggle="tooltip"
                 data-bs-placement="right" data-bs-original-title="Products">
-                <i class="bi bi-hourglass-split fs-5" style="color: #fff;"></i>
+                <i class="bi bi-stack fs-5" style="color: #fff;"></i>
               </a>
             </li>
             <li class="nav-item mb-3">
