--- a/templates/home.html
+++ b/templates/home.html
@@ -7,9 +7,18 @@
 
 {% block titlecontent %}
 
-<div class="row shadow-sm text-center" style=" margin-top: 0px; padding: 5px;  color: #00838f;">
+<div class="row shadow-sm align-items-center" style=" margin-top: 0px; padding: 5px;  color: #00838f;">
 
-  <h2 style="font-family: Bungee;">Welcome {{ user.username }}</h2>
+  <div class="col">
+    <h2 style="font-family: Squada One; text-align: left; font-size: 30px;">Dashboard</h2>
+  </div>
+  <div class="col align-items-center text-center">
+    <img src="{% static 'img/logof.png' %}" width="150px" height="45px" alt="">
+  </div>
+  <div class="col align-items-center">
+    <h2  style="font-family: Squada One; text-align: right; font-size: 20px;">Welcome {{ user.username }}</h2>
+  </div>
+  
 
 </div>
 
@@ -17,45 +26,130 @@
 
 {% block content %}
 
-<div class="row justify-content-center mt-5 p-1">
-  <div class="col-md-3  p-1 text-center"
-    
-    onclick="redirectToPage('pending-task')">
-    <div class="card py-3" style="border-radius: 0; background-color: #01579B; box-shadow: 0px 13px 8px -8px rgba(0, 0, 0, 0.45);">
-    <a style="color: #fff;"> <i class="bi bi-hourglass-split fs-5" style="color: #fff;"></i> Total Pending Task:</a>
-    <h5 style="color: #fff;">{{ count }}</h5>
-  </div>
-  </div>
-  <div class="col-md-3   p-1 text-center"
-    onclick="redirectToPage('completed-task')">
-    
-    <div class="card py-3" style=" border-radius: 0; background-color: #AA00FF; box-shadow: 0px 13px 8px -8px rgba(0, 0, 0, 0.45);">
-    <a style="color: #fff;"> <i class="bi bi-hourglass-split fs-5" style="color: #fff;"></i> Total Completed Task:</a>
-    <h5 style="color: #fff;">{{ complete_task }}</h5>
+<div class="row justify-content-center mt-4 p-1">
+  <div class="col-md-3  p-1 text-center" onclick="redirectToPage('pending-task')">
+    <div class="card py-3 shadow-sm"
+      style="border-radius: 0; background-color: #01579B;">
+      <div class="row  align-items-center">
+        <div class="col-md-3"  style="text-align: right;">
+          <i class="bi bi-stack fs-2" style="color: #fff;"></i> 
+        </div>
+        <div class="col-md-9" style="text-align: left;">
+          <a style="color: #fff;"> Total Pending Task:</a>
+          <h5 style="color: #fff;">{{ count }}</h5>
+        </div>
+      </div>
+
     </div>
   </div>
-  <div class="col-md-3  p-1 text-center"
-    onclick="redirectToPage('add_client')">
-    <div class="card py-3" style="border-radius: 0; background-color: #00C853; box-shadow: 0px 13px 8px -8px rgba(0, 0, 0, 0.45);">
-    <a style="color: #fff;"> <i class="bi bi-hourglass-split fs-5" style="color: #fff;"></i> Total Client:</a>
-    <h5 style="color: #fff;">{{ clnum }}</h5>
+  <div class="col-md-3   p-1 text-center" onclick="redirectToPage('completed-task')">
+
+    <div class="card py-3 shadow-sm"
+      style=" border-radius: 0; background-color: #AA00FF;">
+      <div class="row  align-items-center">
+        <div class="col-md-3"  style="text-align: right;">
+          <i class="bi bi-journal-check fs-2" style="color: #fff;"></i>
+        </div>
+        <div class="col-md-9" style="text-align: left;">
+          <a style="color: #fff;"> Total Completed Task:</a>
+          <h5 style="color: #fff;">{{ complete_task }}</h5>
+        </div>
+    </div>
     </div>
   </div>
-  <div class="col-md-3 p-1 text-center"
-    >
-    <div class="card py-3" style="border-radius: 0; background-color: #6200EA; box-shadow: 0px 13px 8px -8px rgba(0, 0, 0, 0.45);">
-    <a style="color: #fff;"> <i class="bi bi-hourglass-split fs-5" style="color: #fff;"></i> Total Pending Task:</a>
-    <h5 style="color: #fff;">{{ count }}</h5>
+  <div class="col-md-3  p-1 text-center" onclick="redirectToPage('add_client')">
+    <div class="card py-3 shadow-sm"
+      style="border-radius: 0; background-color: #00C853;">
+      <div class="row  align-items-center">
+        <div class="col-md-3"  style="text-align: right;">
+          <i class="bi bi-people-fill fs-2" style="color: #fff;"></i>
+        </div>
+        <div class="col-md-9" style="text-align: left;">
+          <a style="color: #fff;"> Total Client:</a>
+          <h5 style="color: #fff;">{{ clnum }}</h5>
+        </div>
+    </div>
+    </div>
+  </div>
+  <div class="col-md-3 p-1 text-center">
+    <div class="card py-3 shadow-sm"
+      style="border-radius: 0; background-color: #6200EA;">
+      <div class="row  align-items-center">
+        <div class="col-md-3"  style="text-align: right;">
+          <i class="bi bi-hourglass-split fs-2" style="color: #fff;"></i>
+        </div>
+        <div class="col-md-9" style="text-align: left;">
+          <a style="color: #fff;"> Total Completed Task:</a>
+          <h5 style="color: #fff;">{{ complete_task }}</h5>
+        </div>
+    </div>
     </div>
   </div>
 </div>
 
 <div class="row">
   <div class="col-12">
+    <div class="row pt-3 " style=" padding: 7px;  color: #00838f;">
+
+      <div class="col-md-6">
+        <h2 style="font-family: Squada One; font-weight: 400; padding: 5px;">Pending Task:</h2>
+      </div>
+      <div class="col-md-6" style="text-align: right;">
+        <div class="date-time">
+          <div class="date" id="date"></div>
+          <div class="time" id="time"></div>
+        </div>
+      </div>
+
+
+    </div>
+
     <div class="container-fluid" style="height: 500px; overflow-y: auto;">
-      <div class="row p-1">
-        <h3>Pending tasks</h3>
+      <div class="row">
+
         {% for task in all_tasks %}
+        <div class="btn w-100 my-1 py-2 shadow-sm border border-success" style="border-radius: 0;">
+          <!-- Basic Plan -->
+          <div class="row align-items-center">
+
+            <div class="col-12 col-md-1">
+              <i class="bi bi-stack fs-3"></i>
+            </div>
+
+            <div class="col-12 col-md-2" style="text-align: left;">
+              <h6 class="pt-1 text-primary-d1 letter-spacing">
+                {{task.date}}
+              </h6>
+            </div>
+
+            <div class="col-12 col-md-2" style="text-align: left;">
+              <h5 class="pt-1">
+                {{task.client.name}}
+              </h5>
+                <span style="font-size: 15px;">
+                  Task type: {{ task.type }}
+                </span>
+
+            </div>
+
+            <ul class="list-unstyled mb-0 col-12 col-md-6 my-4 my-md-0" style="text-align: left;">
+              <li style="overflow-x: hidden;">
+                <i class="fa fa-check text-success-m2 text-110 mr-2 mt-1"></i>
+
+                  <span>{{task.name}}</span>
+
+              </li>
+            </ul>
+
+            <div class="col-12 col-md-1 " style="text-align: right;">
+              <button type="button" class="btn btn-success edit-task" data-bs-toggle="modal"
+                data-bs-target="#exampleModal" data-task-id="{{ task.id }}"><i class="bi bi-pencil-square"></i></button>
+            </div>
+          </div>
+
+        </div>
+
+        <!--
         <div class="col-md-3 ">
           <div class=" card mb-2 shadow-sm" style=" border-radius: 0;">
             <div class="card-body">
@@ -74,6 +168,7 @@
             </div>
           </div>
         </div>
+        -->
         {% endfor %}
       </div>
 
@@ -82,151 +177,6 @@
 </div>
 
 
-</div>
-<div class="row row-cols-1 row-cols-md-4 g-1 justify-content-center" style="margin-bottom: 30px;">
-
-</div>
-<div class="row justify-content-center mt-5">
-  <div class="col m-1">
-    <div class="row border border-success"
-      style="padding-bottom: 30px; box-shadow: 0 1px 1px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.12);">
-      <div class="text-center text-white " style="padding-top: 30px;">
-        <img src="{% static 'img/logof.png' %}" width="250" height="70" alt="">
-      </div>
-      <div class="datetime-container text-center p-3" style="font-family: Bungee; font-size: 30px;">
-        <div class="date-time">
-          <div class="date" id="date"></div>
-          <div class="time" id="time"></div>
-        </div>
-      </div>
-
-    </div>
-
-    <div class="row justify-content-center">
-      <div class="col  "
-        style="overflow-x: scroll; box-shadow: 0 1px 1px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.12);">
-        <table class="table table-hover">
-          <thead>
-            <tr>
-
-              <th>Task</th>
-              <th>Client</th>
-              <th>Status</th>
-              <th>Type</th>
-              <th>Time</th>
-              <th>action</th>
-              <th>User</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for tas in taskfl %}
-            <tr>
-
-              <td>{{ tas.name }}</td>
-              <td>{{ tas.client.name}}</td>
-              <td>
-                {% if tas.status == "0" %}
-
-                <a type="text">pending</a>
-                {% elif tas.status == "1" %}
-                <a type="text">completed</a>
-                {% endif %}
-              </td>
-              <td>{{ tas.type}}</td>
-              <td>{{ tas.time}}</td>
-              <td>{{ tas.user }}</td>
-              <td>
-                {% if tas.status == "0" %}
-
-                <a href="{% url 'edit_task'  task_id=tas.id %}" type="button" class="btn btn-light"
-                  style="color: #00838f;">edit</a>
-                {% elif tas.status == "1" %}
-                <a type="text">no edit</a>
-                {% endif %}
-              </td>
-            </tr>
-
-            {% endfor %}
-          </tbody>
-        </table>
-      </div>
-    </div>
-
-  </div>
-
-  <div class="col m-1 text-center ">
-    <div class="conta"></div>
-    <div class="row text-center" style=" margin-top: 0px; padding: 5px;  color: #00838f;">
-
-      <h2 style="font-family: Bungee;">Pending Task</h2>
-
-    </div>
-    <div class="row row-cols-1 row-cols-md-4 g-1 justify-content-center" style="margin-bottom: 30px;">
-      {% for task in all_tasks %}
-      <div class="card m-2"
-        style=" border-radius: 0; box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
-        <div class="card-body">
-          <h5 class="card-title">{{task.client.name}}</h5>
-          <p class="card-text">{{ task.name }}</p>
-        </div>
-        <div class="card-body">
-          <p class="card-text">{{ task.date|date:"j F" }}</p>
-          {% if task.status == "0" %}
-
-          <button type="button" class="btn btn-success edit-task" data-bs-toggle="modal" data-bs-target="#exampleModal"
-            data-task-id="{{ task.id }}"><i class="bi bi-pencil-square">Edit</i></button>
-          {% elif task.status == "1" %}
-          <a type="text">no edit</a>
-          {% endif %}
-        </div>
-      </div>
-      {% endfor %}
-    </div>
-    <!--
-      <div class="col border border-success  text-center p-3 "
-      style=" overflow-x: auto; overflow-y: scroll; box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .13), 0 1px 1px 0 rgba(0, 0, 0, .11);">
-
-      <h3 class="p-1">Today Pending Task:</h3>
-      <table class="table table-hover ">
-        <thead>
-          <tr>
-            <th>Date</th>
-            <th>Task</th>
-            <th>Client</th>
-            <th>Type</th>
-            <th>Time</th>
-            <th>action</th>
-            <th>User</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for task in all_tasks %}
-          <tr data-task-id="{{ task.id }}" data-task-name="{{ task.name }}" data-task-client="{{ task.client.name }}"
-            data-task-type="{{ task.type }}" data-task-time="{{ task.time }}">
-            <td>{{ task.date.day}}</td>
-            <td>{{ task.name }}</td>
-            <td>{{ task.client.name}}</td>
-            <td>{{ task.type}}</td>
-            <td>{{ task.time}}</td>
-            <td>{{ task.user }}</td>
-            <td>
-              {% if task.status == "0" %}
-
-              <button type="button" class="btn btn-success edit-task" data-bs-toggle="modal"
-                data-bs-target="#exampleModal" data-task-id="{{ task.id }}"><i class="bi bi-pencil-square"></i></button>
-              {% elif task.status == "1" %}
-              <a type="text">no edit</a>
-              {% endif %}
-            </td>
-          </tr>
-
-          {% endfor %}
-        </tbody>
-      </table>
-    </div>
-    -->
-  </div>
-</div>
 
 
 
