--- a/templates/client_list.html
+++ b/templates/client_list.html
@@ -7,12 +7,157 @@
 
 {% block titlecontent %}
 
-<div class="row shadow-sm " style="margin-top: 0px; padding: 7px; background-color: #fff; color: #00838f;">
-    <h2 style="font-family: Bungee;">Add Client</h2>
+<div class="row shadow-sm align-items-center" style=" margin-top: 0px; padding: 5px;  color: #00838f;">
+
+    <div class="col">
+        <h2 style="font-family: Palanquin Dark; text-align: left; font-size: 25px;">Add Client & Info</h2>
+    </div>
+    <div class="col align-items-center text-center">
+        <img src="{% static 'img/logof.png' %}" width="150px" height="45px" alt="">
+    </div>
+    <div class="col align-items-center">
+        <h2 style="font-family: Palanquin Dark; text-align: right; font-size: 17px;"><i class="bi bi-person-square fs-2"></i> {{ user.username }}</h2>
+    </div>
+
+
 </div>
 {% endblock %}
 
 {% block content %}
+
+<div class="row p-2 m-2">
+
+    <div class="col-md-6 ">
+        <div class="row shadow-sm m-1">
+
+        <div class="col-12 p-3">
+            <div class="text-center p-3  form-control" style="background-color: #00C853; color: #fff;">
+                <h5>Add Client</h5>
+            </div>
+
+        <form class="cs-form " method="post" style="background-color: white;  padding-bottom: 20px;"
+        enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="p-3">
+            <div class="row ">
+
+                <div class="col">
+
+                    <div class="row  p-2">
+                        <label for="client" class="form-label" style="color: #00838f;">Client Name</label>
+                        <input type="text" class="form-control" id="task" placeholder="Task name" name="name"
+                            required>
+                    </div>
+
+                    <div class="row p-2">
+                        <label for="file" class="form-label" style="color: #00838f;">Upload File</label>
+                        <input class="form-control" type="file" name="file" accept="*" required>
+                    </div>
+
+                    <div class="row p-2">
+                        <label for="client" class="form-label" style="color: #00838f;">More Info</label>
+                        <textarea class="form-control" name="description" id="" rows="7"></textarea>
+                    </div>
+
+                    <div class="row mt-2 p-2">
+                        <button type="submit" class="btn btn-lg btn-floating w-100 shadow-sm"
+                            style="background-color: #00838f; border: none; color: #fff; font-family: DM Sans;">
+                            <i class="bi bi bi-plus-square" style="color: #fff;"></i> Add Client</button>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+    </form>
+        </div>
+        </div>
+        <div class="card py-3 m-1 shadow-sm"
+        style="border-radius: 0;">
+        <div class="row  align-items-center">
+          <div class="col" style="text-align: center;">
+            <h3> Total Client:</h3>
+            <h6>{{ clnum }}</h6>
+          </div>
+      </div>
+      </div>
+
+
+    </div>
+    <div class="col-md-6" >
+        <div class="row shadow-sm m-1">
+            <div class="col-12 p-3">
+                <div class="p-3 form-control" style="background-color: #6200EA; color: #fff;">
+                    <div class="row align-items-center">
+                        <div class="col">
+                            <h5>Client List:</h5>
+                        </div>
+                        <div class="col">
+                            <input class="form-control" type="text" id="searchInput" placeholder="Search">
+                        </div>
+                    </div>
+
+                    
+                </div>
+
+                <div class="container-fluid " style="border-bottom: #00838f; border-radius: 0; height: 75vh; overflow-y: auto; padding-bottom: 5vh;">
+                    <div class="row p-2 mt-2" id="cardList">
+                        {% for clnt in docs %}
+                      <div class="card mt-2 py-3 show-client shadow-sm" style=" border-radius: 0;" data-bs-toggle="modal" data-bs-target="#clientModal"
+                      data-client-id="{{ clnt.id }}"
+                      style="background-color: #FAFAFA; border-radius: 0; box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
+                        <!-- Basic Plan -->
+                        <div class="row align-items-center" style="text-align: center;">
+                        
+                            <div class="col-4" style="text-align: right;">
+                                <i class="bi bi-people-fill fs-4"></i>
+                            </div>
+                          <div class="col-4" style="text-align: center;">
+                            <h6 class=" pt-1 " style="font-size: 20px;">
+                              {{clnt.name}}
+                            </h6>
+                          </div>
+                          <div class="col-4"></div>
+
+                        </div>
+              
+                        <style>
+                            .card:hover {
+                                background-color: #00838f;
+        
+                            }
+        
+                            .card:hover h6 {
+                                color: #fff;
+                            }
+                            .card:hover h3 {
+                                color: #fff;
+                            }
+                            .card:hover i {
+                                color: #fff;
+                            }
+                        </style>
+                      </div>
+                      {% endfor %}
+                    </div>
+              
+                  </div>
+            </div>
+
+        </div>
+
+    </div>
+</div>
+
+
+
+
+
+
+<!--##############################################################################################################################-->
+
+<!--
 <div class="container-fluid mt-2">
     <div class="col justify-content-center">
         <form class="cs-form " method="post" style="background-color: white;  padding-bottom: 20px;"
@@ -67,7 +212,7 @@
 
         </form>
     </div>
- 
+
 
     <div class="row text-center p-2">
         <h5 style=" text-decoration: underline;">Client List (Click On Client Name For More Info)</h5>
@@ -78,8 +223,8 @@
         {% for clnt in docs %}
         <div class="col text-center">
 
-            <div class="card show-client border-success" data-bs-toggle="modal"
-            data-bs-target="#clientModal" data-client-id="{{ clnt.id }}"
+            <div class="card  border-success" data-bs-toggle="modal" data-bs-target="#clientModal"
+                data-client-id="{{ clnt.id }}"
                 style=" border-radius: 0; box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);">
                 <div class="card-body">
                     <h5 class="card-title">{{ clnt.name }}</h5>
@@ -87,12 +232,12 @@
                 <style>
                     .card:hover {
                         background-color: #00838f;
-                      
+
                     }
-                    .card:hover h5{
+
+                    .card:hover h5 {
                         color: #fff;
                     }
-                    
                 </style>
 
             </div>
@@ -101,7 +246,7 @@
 
     </div>
 </div>
-
+-->
 
 <div class="modal fade" id="clientModal" tabindex="-1" aria-labelledby="clientModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
@@ -151,6 +296,30 @@
             });
         });
     });
+
+
+    // Get references to the search input and card list
+const searchInput = document.getElementById("searchInput");
+const cardList = document.getElementById("cardList");
+
+// Add an input event listener to the search input
+searchInput.addEventListener("input", function () {
+    const searchQuery = searchInput.value.toLowerCase();
+    const cards = cardList.getElementsByClassName("card");
+
+    // Loop through the cards and hide/show based on the search query
+    for (let i = 0; i < cards.length; i++) {
+        const card = cards[i];
+        const cardText = card.textContent.toLowerCase();
+        if (cardText.includes(searchQuery)) {
+            card.style.display = "block";
+        } else {
+            card.style.display = "none";
+        }
+    }
+});
+
+
 
 </script>
 
