--- a/templates/pending.html
+++ b/templates/pending.html
@@ -5,10 +5,20 @@
 {% block title %} <title> Pending-task </title> {% endblock %}
 
 {% block titlecontent %} 
+<div class="row shadow-sm align-items-center" style=" margin-top: 0px; padding: 5px;  color: #00838f;">
 
-<div class="row shadow-sm " style="margin-top: 0px; padding: 7px; color: #00838f;">
-  <h2 style="font-family: Racing Sans One;">Pending Tasks</h2>
-</div> 
+  <div class="col">
+    <h2 style="font-family: Palanquin Dark; text-align: left; font-size: 25px;">Pending Tasks</h2>
+  </div>
+  <div class="col align-items-center text-center">
+    <img src="{% static 'img/logof.png' %}" width="150px" height="45px" alt="">
+  </div>
+  <div class="col align-items-center">
+    <h2  style="font-family: Palanquin Dark; text-align: right; font-size: 17px;">Welcome {{ user.username }}</h2>
+  </div>
+  
+
+</div>
 {% endblock %}
 
 {% block content %} 
