--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -9,13 +9,13 @@
 <div class="row shadow-sm align-items-center" style=" margin-top: 0px; padding: 5px;  color: #00838f;">
 
     <div class="col">
-      <h2 style="font-family: Palanquin Dark; text-align: left; font-size: 25px;">Edit Task</h2>
+      <h2 style="font-family: Didact Gothic; text-align: left; font-size: 25px;">Edit Task</h2>
     </div>
     <div class="col align-items-center text-center">
       <img src="{% static 'img/logof.png' %}" width="150px" height="45px" alt="">
     </div>
     <div class="col align-items-center">
-      <h2  style="font-family: Palanquin Dark; text-align: right; font-size: 17px;">Welcome {{ user.username }}</h2>
+      <h2  style="font-family: Didact Gothic; text-align: right; font-size: 17px;">Welcome {{ user.username }}</h2>
     </div>
     
   
