--- a/templates/base.html
+++ b/templates/base.html
@@ -13,13 +13,14 @@
   <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'icofont/icofont.min.css' %}">
   <link
-    href='https://fonts.googleapis.com/css?family=Encode Sans Condensed|Palanquin Dark|Monomaniac One|Squada One|Konkhmer Sleokchher|Odibee Sans|Contrail One|Racing Sans One|Audiowide|DM Sans|Monoton|Megrim|Yanone Kaffeesatz|Bungee|Geo'
+    href='https://fonts.googleapis.com/css?family=Encode Sans Condensed|Palanquin Dark|Monomaniac One|Squada One|Didact Gothic|Konkhmer Sleokchher|Odibee Sans|Contrail One|Racing Sans One|Audiowide|DM Sans|Monoton|Megrim|Yanone Kaffeesatz|Bungee|Geo'
     rel='stylesheet'>
   <style>
     body {
       font-family: 'DM Sans';
       font-size: 17px;
       background-color: #fff ;
+      color: #00695c;
     }
     .formatted-text {
     white-space: pre-line;
@@ -92,7 +93,7 @@
       </div>
       <div class="col-sm  min-vh-100">
         <!-- content -->
-        <div class="col-12">
+        <div class="container">
           {% block titlecontent %} {% endblock %}
         </div>
         {% block content %} {% endblock %}
