--- a/templates/client_list.html
+++ b/templates/client_list.html
@@ -10,13 +10,13 @@
 <div class="row shadow-sm align-items-center" style=" margin-top: 0px; padding: 5px;  color: #00838f;">
 
     <div class="col">
-        <h2 style="font-family: Palanquin Dark; text-align: left; font-size: 25px;">Add Client & Info</h2>
+        <h2 style="font-family: Didact Gothic; text-align: left; font-size: 25px;">Add Client & Info</h2>
     </div>
     <div class="col align-items-center text-center">
         <img src="{% static 'img/logof.png' %}" width="150px" height="45px" alt="">
     </div>
     <div class="col align-items-center">
-        <h2 style="font-family: Palanquin Dark; text-align: right; font-size: 17px;"><i class="bi bi-person-square fs-2"></i> {{ user.username }}</h2>
+        <h2 style="font-family: Didact Gothic; text-align: right; font-size: 17px;">Welcome {{ user.username }}</h2>
     </div>
 
 
@@ -60,9 +60,9 @@
                     </div>
 
                     <div class="row mt-2 p-2">
-                        <button type="submit" class="btn btn-lg btn-floating w-100 shadow-sm"
-                            style="background-color: #00838f; border: none; color: #fff; font-family: DM Sans;">
-                            <i class="bi bi bi-plus-square" style="color: #fff;"></i> Add Client</button>
+                        <button type="submit" class="btn btn-lg btn-primary w-100 shadow-sm"
+                            style=" border: none; font-family: DM Sans;">
+                            <i class="bi bi bi-plus-square" ></i> Add Client</button>
                     </div>
 
                 </div>
