--- a/templates/home.html
+++ b/templates/home.html
@@ -10,13 +10,13 @@
 <div class="row shadow-sm align-items-center" style=" margin-top: 0px; padding: 5px;  color: #00838f;">
 
   <div class="col">
-    <h2 style="font-family: Palanquin Dark; text-align: left; font-size: 25px;">Dashboard</h2>
+    <h2 style="font-family: Didact Gothic; text-align: left; font-size: 25px;">Dashboard</h2>
   </div>
   <div class="col align-items-center text-center">
     <img src="{% static 'img/logof.png' %}" width="150px" height="45px" alt="">
   </div>
   <div class="col align-items-center" >
-      <h2  style="font-family: Palanquin Dark; text-align: right; font-size: 17px;">Welcome {{ user.username }}</h2>
+      <h2  style="font-family: Didact Gothic; text-align: right; font-size: 17px;">Welcome {{ user.username }}</h2>
 
   </div>
   
@@ -105,7 +105,7 @@
 
     </div>
 
-    <div class="container-fluid " style="border-bottom: #00838f; border-radius: 0; height: 63vh; overflow-y: auto; padding-bottom: 5vh;">
+    <div class="container-fluid " style=" border-radius: 0; height: 50vh; overflow-y: auto; padding-bottom: 5vh;">
       <div class="row  mt-2">
 
         {% for task in all_tasks %}
@@ -143,8 +143,9 @@
             </ul>
 
             <div class="col-12 col-md-1 " style="text-align: right;">
-              <button type="button" class="btn btn-success edit-task" data-bs-toggle="modal"
-                data-bs-target="#exampleModal" data-task-id="{{ task.id }}"><i class="bi bi-pencil-square"></i></button>
+              <button type="button" class="btn btn-floating edit-task" data-bs-toggle="modal"
+                data-bs-target="#exampleModal" data-task-id="{{ task.id }}"
+                style="background-color: #00838f; color: #fff;"><i class="bi bi-pencil-square"></i></button>
             </div>
           </div>
 
