--- a/templates/client_list.html
+++ b/templates/client_list.html
@@ -7,7 +7,7 @@
 
 {% block titlecontent %}
 
-<div class="row shadow-sm align-items-center" style=" margin-top: 0px; padding: 5px;  color: #00838f;">
+<div class="row shadow-sm align-items-center border border-success m-2" style=" padding: 5px;  color: #00838f;">
 
     <div class="col">
         <h2 style="font-family: Didact Gothic; text-align: left; font-size: 25px;">Add Client & Info</h2>
